--- a/index.css
+++ b/index.css
@@ -17,6 +17,16 @@ body{
     color: white;
 }
 
+/* #job-role */
+#job-role{
+    position: absolute;
+    bottom: -55px;
+    right: 0;
+    font-size: 90px;
+    z-index: 2;
+    color: #FFE15D;
+}
+
 /* ======== nav-bar ======== */
 nav{
     /* background-color: #00425A; */
@@ -84,6 +94,7 @@ nav>span a:hover div{
     justify-content: space-evenly;
     align-items: center;
     margin-right: 100px;
+    position: relative;
 }
 #logo-image-container{
     border: 40px solid black;
